--- a/sp_06/sp_06/src/main/resources/application.properties
+++ b/sp_06/sp_06/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#url + ip + BBDD
-spring.datasource.url=jdbc:mysql://localhost:3307/empleos
-#USER + PASS
+spring.application.name=sp_06
+#spring.datasource.driver-class-name=jdbc:mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3307/empleos?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.generate-ddl=false
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# A partir de Spring Boot 3.5.0 la propiedad << spring.servlet.multipart.enabled >> se debe omitir porque ya esta habilitada por defecto.
-#spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=c:/tmp
 spring.servlet.multipart.max-file-size=2MB
+
 empleosapp.ruta.imagenes=c:/empleos/img-vacantes/
+empleosapp.ruta.cv=c:/empleos/files-cv/
 spring.data.web.pageable.default-page-size=5
 server.servlet.session.tracking-modes=cookie
